<resources>
    <string name="startLipadTitle01">Start LIPAD</string>
    <string name="startLipadSub01" translatable="false">Begin the process to navigate LIPAD.</string>
    <string name="startLipadButton01">START</string>
    <string name="startLipadImage01">LIPAD logo</string>
    <string name="app_name" translatable="false">LIPAD</string>
    <string name="darkSkyDisclaimer" translatable="false">Weather forecast powered by Dark Sky</string>
    <string name="weatherButton01">REFRESH</string>
    <string name="weatherButton02">EXPLORE</string>
    <string name="weatherTitle01">Checking up weather…</string>
    <string name="weatherSub01">This may take a few seconds</string>
    <string name="weatherImage01" translatable="false">Weather condition</string>
    <string name="weatherTemp01" translatable="false">"  °C"</string>
    <string name="weatherTime11">AM/PM</string>
    <string name="weatherSub11" translatable="false">m/s\n%\n%</string>
    <string name="windText">"Wind: "</string>
    <string name="humidityText">"Humidity: "</string>
    <string name="chanceOfRainText">"Chance of Rain: "</string>
    <string name="humidityInitial">"H: "</string>
    <string name="chanceOfRainInitial">"R: "</string>
    <string name="partlyCloudyText">Partly Cloudy</string>
    <string name="mostlyCloudyText">Mostly Cloudy</string>
    <string name="clearText">Clear</string>
    <string name="drizzleText">Drizzle</string>
    <string name="weatherSub21">MWF</string>
    <string name="editString">EDIT</string>
    <string name="selectString">SELECT</string>
    <string name="breezyPartlyCloudyText">Breezy and Partly Cloudy</string>
    <string name="breezyMostlyCloudyText">Breezy and Mostly Cloudy</string>
    <string name="addFieldText">Add a field</string>
    <string name="fieldNameText">Field name</string>
    <string name="rowText">Rows</string>
    <string name="columnText">Columns</string>
    <string name="cancelText">cancel</string>
    <string name="addText">add</string>
    <string name="placeholderText" translatable="false">placeHolder</string>
</resources>
