<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/headerView"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerView" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card01"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <TextView
                        android:id="@+id/startLipadTitle01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/work_sans_bold"
                        android:text="@string/startLipadTitle01"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/startLipadSub01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/startLipadTitle01"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-1dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/work_sans_medium"
                        android:text="@string/startLipadSub01"
                        android:textAllCaps="false"
                        android:textColor="@color/colorText" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/colorBgd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                    <TextView
                        android:id="@+id/weatherTitle01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/work_sans_bold"
                        android:text="@string/weatherTitle01"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weatherSub01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weatherTitle01"
                        android:layout_alignStart="@+id/weatherTitle01"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/work_sans_medium"
                        android:text="@string/weatherSub01"
                        android:textColor="@color/colorText" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/weatherImage01"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/weatherImage01"
                        android:scaleType="center"
                        app:srcCompat="@drawable/cloudmdpi" />

                    <Button
                        android:id="@+id/weatherButton01"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_toStartOf="@+id/weatherButton02"
                        android:fontFamily="@font/work_sans_bold"
                        android:text="@string/weatherButton01"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/weatherButton02"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/work_sans_bold"
                        android:text="@string/weatherButton02"
                        android:textAlignment="center" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/lipadlogo" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="START" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/lipadlogo" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="START" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/lipadlogo" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="START" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:text="Placeholder"
                        android:textColor="@color/colorText" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:srcCompat="@drawable/lipadlogo" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:text="START" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/darkSkyDisclaimer"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/darkSkyDisclaimer"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
